--- a/resources/src/main/res/values-de/strings.xml
+++ b/resources/src/main/res/values-de/strings.xml
@@ -263,7 +263,7 @@
   <string name="idepref_editor_autoSave_title">Dateien vor dem schließen speichern</string>
   <string name="idepref_java_matchLower_summary">Wenn diese Option aktiviert ist, werden durch die Eingabe von Klein- oder Großbuchstaben Klassennamen sowie Bereichsmitglieder vorgeschlagen.</string>
   <string name="msg_files_unsaved">Einige Dateien wurden noch nicht gespeichert. Möchtest du diese nun speichern? Nicht gespeicherte Dateien: %s</string>
-  <string name="idepref_editor_category_common">Common</string>
+  <string name="title_common">Common</string>
   <string name="action_expand_selection">Auswahl erweitern</string>
   <string name="idepref_java_matchLower_title">Vervollständigungen in Kleinbuchstaben nutzen</string>
   <string name="msg_compiler_module_install">Kompilierer Modul wird installiert, bitte warten&#8230;</string>
