--- a/resources/src/main/res/values-bn/strings.xml
+++ b/resources/src/main/res/values-bn/strings.xml
@@ -407,6 +407,13 @@
     <string name="idepref_emptyElements_summary">খালি উপাদানগুলির জন্য ফর্ম্যাটিং আচরণ চয়ন করুন৷</string>
     <string name="xml_formatting_options">XML ফর্ম্যাটিং অপশনগুলি</string>
     <string name="xml_formatting_options_summary">XML ফর্ম্যাটার কনফিগার করুন</string>
+    <string name="idepref_customFont_title">কাস্টম ফন্ট ব্যবহার করুন</string>
+    <string name="idepref_customFont_summary">সক্রিয় থাকলে, \"/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf\" ফাইলটিকে এডিটর-এর ফন্ট হিসেবে ব্যবহার করা হবে।</string>
+    <string name="idepref_chooseFont_title">কাস্টম ফন্ট নির্বাচন করুন</string>
+    <string name="idepref_chooseFont_summary">টার্মিনালে ব্যবহার করার জন্য ফন্ট চয়ন করুন (এবং ঐচ্ছিকভাবে, সম্পাদকে)।</string>
+    <string name="msg_installing_apk">APK ইনস্টল করা হচ্ছে...</string>
+    <string name="msg_installed_successfully">সফলভাবে ইনস্টল হয়েছে</string>
+    <string name="msg_action_open_application">তুমি কি অ্যাপ্লিকেশনটি খুলতে চাও?</string>
 
     <string name="title_gradle_service_notification_channel">AndroidIDE Gradle build পরিষেবা</string>
     <string name="msg_hex_color_code">হেক্স কালার কোড</string>
@@ -459,4 +466,15 @@
     <string name="msg_cannot_create_view">ট্যাগটির জন্য View তৈরি করা যাচ্ছে না: %s</string>
     <string name="err_no_attr_adapter">%s এর জন্য কোনো অ্যাট্রিবিউট অ্যাডাপ্টার ইমপ্লিমেন্টেশন পাওয়া যায়নি</string>
     <string name="msg_view_not_supported">View %s বর্তমানে সমর্থিত নয়৷</string>
+
+    <string name="replace">প্রতিস্থাপন করুন</string>
+    <string name="replaceAll">সবকটি প্রতিস্থাপন করুন</string>
+    <string name="title_run_tasks">প্রক্রিয়া চালান</string>
+    <string name="hint_search_tasks">প্রক্রিয়া খুজুন…</string>
+    <string name="title_selected_tasks">নির্বাচিত প্রক্রিয়াগুলি</string>
+    <string name="msg_err_select_tasks">চালানোর জন্য প্রক্রিয়া নির্বাচন করুন</string>
+    <string name="title_confirmation">নিশ্চিতকরণ</string>
+    <string name="msg_tasks_to_run">নিম্নলিখিত প্রক্রিয়া গুলি চালানো হবে, ক্রমানুসারে। নিশ্চিত করার জন্য \'Run\' বাটনটিতে আবার ক্লিক করুন.\n\n%1$s</string>
+    <string name="msg_loading_tasks">প্রক্রিয়া লোড করা হচ্ছে...</string>
+    <string name="title_all_tasks">সমস্ত প্রক্রিয়াগুলি</string>
 </resources>
