Add some missing Indonesian translations

--- a/resources/src/main/res/values-in/strings.xml
+++ b/resources/src/main/res/values-in/strings.xml
@@ -314,4 +314,44 @@
     <string name="msg_package_not_valid_char_2">Karakter %1$s tidak diperbolehkan di package name Android</string>
     <string name="msg_package_mus_have_dot">Package setidaknya harus mempunyai satu \'.\' separator</string>
     <string name="msg_package_not_use_digit_first">Package segment tidak dapat diawali dengan angka</string>
+  <string name="idepref_changelog_summary">Apa yang baru di versi ini?</string>
+    <string name="action_remove_method">Hapus method</string>
+    <string name="action_remove_class">Hapus class</string>
+    <string name="action_remove_unused_throws">Hapus throws yang tidak digunakan</string>
+    <string name="msg_no_methods_selected">Tidak ada methods yang terselect</string>
+    <string name="replace">Ganti</string>
+    <string name="replaceAll">Ganti Semua</string>
+    <string name="title_run_tasks">Jalankan tasks</string>
+    <string name="hint_search_tasks">Cari tasks</string>
+    <string name="msg_err_select_tasks">Mohon pilih task untuk dijalankan</string>
+    <string name="title_confirmation">Konfirmasi</string>
+    <string name="msg_cannot_generate_setters_getters">Tidak dapat membuat setters dan getters</string>
+    <string name="msg_select_methods">Pilih methods untuk di override</string>
+    <string name="msg_no_overridable_methods">Tidak dapat menemukan method yang dapat di override</string>
+    <string name="action_goto_definition">Pergi ke definisi</string>
+    <string name="action_find_references">Termukan referensi</string>
+    <string name="action_generate_toString">Buat toString()</string>
+    <string name="action_remove_unused_imports">Hapus imports yang tidak digunakan</string>
+    <string name="msg_action_open_application">Apa kamu ingin membuka aplikasi?</string>
+    <string name="idepref_customFont_title">Gunakan custom font</string>
+    <string name="idepref_chooseFont_title">Pilih custom font</string>
+    <string name="msg_installed_successfully">Berhasil terinstall</string>
+    <string name="msg_installing_apk">Menginstall APK...</string>
+    <string name="msg_ndk_currently_unsupported">NDK saat ini tidak kompatibel. Template ini hanya dapat dijalankan setelah menyetting NDK</string>
+    <string name="wizard_error_name_empty">Nama tidak dapat kosong.</string>
+    <string name="wizard_error_name_illegal">nama tidak dapat berisi illegal karakter</string>
+    <string name="build_status_sucess">Build berhasil</string>
+    <string name="build_status_failed">Build gagal. Lihat build output untuk detail lebih.</string>
+    <string name="btn_docs">Dokumentasi</string>
+    <string name="about">Tentang</string>
+    <string name="msg_select_fields">Pilih fields</string>
+    <string name="msg_no_fields_selected">Tidak ada fields terpilih</string>
+    <string name="msg_no_fields_found">Fields tidak ditemukan</string>
+    <string name="msg_toString_overridden">toString() sudah di override</string>
+    <string name="title_selected_tasks">Tasks terpilih</string>
+    <string name="msg_tasks_to_run">Task terpilih akan dijalankan. Click \'Run\' button lagi untuk mengonfirmasi. %1$s</string>
+    <string name="msg_require_install_jdk_and_android_sdk">Kamu perlu menginstall JDK dan Android SDK agar IDE dapat berjalan. Untuk menginstall klik \'Oke\' dan ikuti instruksi <![CDATA[ <a href="https://github.com/itsaky/androidide-build-tools#installing-in-androidide">disini</a>]]></string>
+    <string name="idepref_group_summary">Diskusi fitur, bugs, dan perbaikan disini.</string>
+    <string name="idepref_about_summary">Selebihnya tentang AndroidIDE.</string>
+    <string name="idepref_chooseFont_summary">Pilih font untuk Terminal (dan optional juga, di Editor)</string>
 </resources>
