Moved UI designer to :uidesigner module

--- a/changelogs/v2.1.3-beta.md
+++ b/changelogs/v2.1.3-beta.md
@@ -4,7 +4,7 @@ This release brings various improvements and bug fixes to AndroidIDE.
 
 ## Important notes
 
-> _No notes_
+> _The UI designer has been TEMPORARILY removed as we are working on integrating it with the new projects API for better and improved layout inflation/preview._
 
 ## Additions
 - The IDE now creates `.nomedia` file in the `PROJECTS` directory if the file does not already exist. Thanks to @jayx003 (#489).
@@ -14,7 +14,7 @@ This release brings various improvements and bug fixes to AndroidIDE.
 - Readded `Clear Gradle cache` preference. Thanks to @deepkrg17 (#587).
 
 ## Removals
-> _No removals_
+- The UI designer.
 
 ## Fixes
 - Some classes not being shown in completion (#500).
