--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -470,7 +470,6 @@
 
   <string name="widget_textview">TextView</string>
   <string name="widget_button">Button</string>
-  <string name="widget_group_android">Android</string>
   <string name="widget_checkbox">CheckBox</string>
   <string name="widget_checked_textview">CheckedTextView</string>
   <string name="widget_edittext">EditText</string>
@@ -480,7 +479,17 @@
   <string name="widget_radio_button">RadioButton</string>
   <string name="widget_seekbar">SeekBar</string>
   <string name="widget_spinner">Spinner</string>
-  <string name="widget_group_layouts">Layouts</string>
   <string name="layout_linear">LinearLayout</string>
   <string name="layout_relative">RelativeLayout</string>
+  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
+  <string name="widget_listview">ListView</string>
+  <string name="widget_surfaceview">SurfaceView</string>
+  <string name="widget_switch">Switch</string>
+  <string name="widget_textureview">TextureView</string>
+  <string name="widget_togglebutton">ToggleButton</string>
+  <string name="widget_frame_layout">FrameLayout</string>
+  <string name="widget_grid_layout">GridLayout</string>
+  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
+  <string name="widget_relative_layout">RelativeLayout</string>
+  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
 </resources>
