--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -487,9 +487,10 @@
   <string name="widget_switch">Switch</string>
   <string name="widget_textureview">TextureView</string>
   <string name="widget_togglebutton">ToggleButton</string>
+  <string name="widget_webview">WebView</string>
   <string name="widget_frame_layout">FrameLayout</string>
   <string name="widget_grid_layout">GridLayout</string>
   <string name="widget_linear_layout_horz">LinearLayout (H)</string>
-  <string name="widget_relative_layout">RelativeLayout</string>
   <string name="widget_linear_layout_vert">LinearLayout (V)</string>
+  <string name="widget_relative_layout">RelativeLayout</string>
 </resources>
