--- a/resources/src/main/res/values-pt/strings.xml
+++ b/resources/src/main/res/values-pt/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
-
   <!-- AndroidIDE -->
   <string name="app_name">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE usa uma construção modificada do JDK que é licenciada sob a GNU General Public License v2.0. O código fonte e a licença do JDK estão disponíveis em :</string>
@@ -29,7 +28,6 @@
   <string name="ide_logs">Registros da IDE</string>
   <string name="label_splash_image">Imagem inicial</string>
   <string name="get_started">Começar</string>
-
   <!-- LSP, Diagnostics & Completions -->
   <string name="msg_cannot_perform_fix">Incapaz de realizar uma correção rápida</string>
   <string name="msg_performing_actions">Executando ação de código…</string>
@@ -41,7 +39,6 @@
   <string name="msg_no_definition">Definição não encontrada</string>
   <string name="msg_no_references">Nenhuma referência encontrada</string>
   <string name="view_diags">Diagnóstico</string>
-
   <!-- Build Tools Installation -->
   <string name="title_installation_failed">Instalação falhada</string>
   <string name="get_ready_for_something_awesome">Prepare-se para algo incrível!</string>
@@ -50,7 +47,6 @@
   <string name="please_wait">Por favor aguarde um momento …</string>
   <string name="title_device_not_supported">Dispositivo não suportado</string>
   <string name="msg_device_not_supported">Infelizmente, seu dispositivo não é compatível no momento. Lamentamos o inconveniente.\n\nABIs de CPU compatíveis: aarch64 e armeabi-v7a</string>
-
   <!-- Project Builder -->
   <string name="lint">Lint</string>
   <string name="lint_debug">lintDebug</string>
@@ -77,7 +73,6 @@
   <string name="gradle">Gradle</string>
   <string name="title_first_build">Primeira compilação</string>
   <string name="msg_first_build">Esta é a primeira vez que se compila depois de instalar o AndroidIDE. A primeira compilação geralmente leva tempo, pois a Gradle baixa todas as dependências e plugins. Este processo pode demorar cerca de 10-15 minutos. Mas isto depende totalmente de sua conexão de rede.\n\nPor favor, seja paciente...</string>
-
   <!-- Project -->
   <string name="create_project">Criar projeto</string>
   <string name="minimum_sdk">SDK mínimo</string>
@@ -96,7 +91,6 @@
   <string name="title_confirm_project_close">Fechar projeto</string>
   <string name="msg_confirm_project_close">Você tem certeza de que quer encerrar este projeto? Todos os daemons Gradle iniciados serão interrompidos após o encerramento deste projeto.</string>
   <string name="project_exists">Já existe um projeto com o mesmo nome!</string>
-
   <!-- Templates -->
   <string name="template_basic">Projeto Básico</string>
   <string name="template_description_basic">Um projeto básico com AppCompat Toolbar e um Botão de Ação Flutuante (FAB)</string>
@@ -117,7 +111,8 @@
   <string name="template_cpp_description">Cria um novo projeto com uma Activity Vazia configurada para usar JNI</string>
   <string name="template_no_activity">Sem Activity</string>
   <string name="template_no_activity_description">Cria um novo projeto sem activity</string>
-
+  <string name="template_no_AndroidX">NoAndroidX</string>
+  <string name="template_description_noAndroidX">Creates a new project without AndroidX library</string>
   <!-- Files -->
   <string name="save">Salvar</string>
   <string name="menu_find">Encontrar</string>
@@ -187,14 +182,9 @@
   <string name="msg_storage_denied">Não é possível prosseguir sem permissões de armazenamento</string>
   <string name="msg_storage_granted">Permissões de armazenamento concedidas!</string>
   <string name="open_with">Abrir com...</string>
-
   <!-- Code Editor -->
   <string name="undo">Desfazer</string>
   <string name="redo">Refazer</string>
- 
-  <item name="copy" type="string" tools:override="true">Copiar</item>
-  <item name="text_to_search" type="string">Texto para pesquisar</item>
-
   <!-- Preferences -->
   <string name="title_change_text_size">Tamanho da fonte do editor</string>
   <string name="idepref_about_title">Sobre o AndroidIDE</string>
@@ -227,31 +217,14 @@
   <string name="pref_changelog">Registro de alterações</string>
   <string name="msg_editor_font_size">Por favor, escolha o tamanho da fonte padrão do editor:</string>
   <string name="msg_clear_cache">Isso excluirá o diretório de caches criado pelo Gradle. Se você excluí-lo, a próxima compilação pode demorar um pouco mais do que o normal, pois o Gradle fará o download dos arquivos necessários novamente.\nIMPORTANTE: Isso também excluirá o AAPT2. Você precisará reinstalá-lo, caso contrário, ocorrerá uma falha de compilação.\n\nTem certeza de que deseja excluir os caches?</string>
-
   <!-- Error Messages used while Logging -->
   <string name="err_init_sdkinfo">Não foi possível inicializar as informações do SDK</string>
   <string name="err_cannot_preview_layout">Não foi possível visualizar o layout</string>
   <string name="err_cannot_inflate_layout">Não foi possível inflar o layout</string>
-
   <!-- Layout preview and designer -->
   <string name="msg_cannot_preview_layout">Não foi possível visualizar o layout!</string>
   <string name="title_preview_layout">Visualizar layout</string>
   <string name="label_ui_designer_content">Conteúdo principal do designer da UI</string>
-  <string name="widget_textview">TextView</string>
-  <string name="widget_button">Button</string>
-  <string name="widget_group_android">Android</string>
-  <string name="widget_checkbox">CheckBox</string>
-  <string name="widget_checked_textview">CheckedTextView</string>
-  <string name="widget_edittext">EditText</string>
-  <string name="widget_image_button">ImageButton</string>
-  <string name="widget_image_view">ImageView</string>
-  <string name="widget_progressbar">ProgressBar</string>
-  <string name="widget_radio_button">RadioButton</string>
-  <string name="widget_seekbar">SeekBar</string>
-  <string name="widget_spinner">Spinner</string>
-  <string name="widget_group_layouts">Layouts</string>
-  <string name="layout_linear">LinearLayout</string>
-  <string name="layout_relative">RelativeLayout</string>
   <string name="msg_applicable_attrs">Atributos aplicáveis</string>
   <string name="msg_attr_editor_actions">Ações</string>
   <string name="title_viewaction_delete">Excluir</string>
@@ -340,7 +313,6 @@
   <string name="msg_gradle_installation_path">Caminho de instalação do Gradle</string>
   <string name="msg_gradle_installation_input_help">Deixe em branco para usar o wrapper Gradle.</string>
   <string name="msg_require_install_jdk_and_android_sdk">Você precisa instalar o JDK e o SDK do Android para que o IDE funcione. Para instalar, clique em \'Sim\' e siga as instruções <![CDATA[ <a href="https://github.com/itsaky/androidide-build-tools#installing-in-androidide">aqui</a>]]></string>
- 
   <string name="build_status_idle">Nenhuma compilação em andamento</string>
   <string name="build_status_in_progress">Compilação em andamento…</string>
   <string name="build_status_failed">Falha na compilação. Consulte os logs de compilação para obter mais detalhes.</string>
@@ -352,7 +324,6 @@
   <string name="err_authority_not_allowed">Autoridade \'%s\' não permitida</string>
   <string name="idepref_useIcu_title">Use a biblioteca ICU</string>
   <string name="idepref_useIcu_summary">Use a biblioteca ICU para usar bordas de palavras de recuperação para seleção de palavras de toque duplo e pressionamento longo.</string>
-
   <!--The text sorrounded with '@@' is spanned as clickable.-->
   <!--There must be exactly two '@@' sorrounding the text that should be clickable.-->
   <string name="msg_swipe_for_files">Deslize à esquerda para @@arquivos@@.</string>
@@ -408,16 +379,26 @@
   <string name="idepref_emptyElements_summary">Escolha o comportamento de formatação para elementos vazios.</string>
   <string name="xml_formatting_options">Opções de formatação XML</string>
   <string name="xml_formatting_options_summary">Configurar o formatador XML</string>
+  <string name="idepref_customFont_title">Use custom font</string>
+  <string name="idepref_customFont_summary">If enabled, the file at \"/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf\" will be used as Editor font.</string>
+  <string name="idepref_chooseFont_title">Choose custom font</string>
+  <string name="idepref_chooseFont_summary">Choose font to use in the Terminal (and optionally, in the Editor).</string>
   <string name="msg_installing_apk">Instalando APK...</string>
   <string name="msg_installed_successfully">Instalado com sucesso</string>
   <string name="msg_action_open_application">Deseja abrir o aplicativo?</string>
-
+  <string name="title_gradle_service_notification_channel">AndroidIDE Gradle build service</string>
   <string name="msg_hex_color_code">Código de cor hexadecimal</string>
   <string name="msg_color_picker_pick">Escolha</string>
   <string name="msg_chmod_exec">Definindo permissões executáveis…</string>
   <string name="msg_linking">Vinculando %1$s a %2$s</string>
   <string name="msg_extracting_hooks">Extraindo bibliotecas de ganchos…</string>
-
+  <string name="msg_empty_package">Package name is empty</string>
+  <string name="msg_package_is_not_valid">Package name is not a valid</string>
+  <string name="msg_package_is_to_long">Package name is to long</string>
+  <string name="msg_package_not_valid_char_1">The character \'_\' cannot be the first character in a package segment</string>
+  <string name="msg_package_not_use_digit_first">A digit cannot be the first character in a package segment</string>
+  <string name="msg_package_not_valid_char_2">The character \"%1$s\" is not allowed in Android application package names</string>
+  <string name="msg_package_mus_have_dot">The package must have at least one \'.\' separator</string>
   <string name="action_import_classes">Importar classe(s)</string>
   <string name="action_generate_setters_getters">Gerar setters/getters</string>
   <string name="action_add_throws">Adicionar \'throws\'</string>
@@ -443,10 +424,53 @@
   <string name="msg_no_overridable_methods">Não foi possível encontrar nenhum método sobreponível</string>
   <string name="action_goto_definition">Ir para definição</string>
   <string name="action_find_references">Encontrar referências</string>
-
+  <string name="action_generate_toString">Gerar toString()</string>
+  <string name="action_remove_unused_imports">Remover imports inúteis</string>
+  <string name="action_organize_imports">Organizar imports</string>
+  <string name="msg_cannot_generate_toString">Não é possível gerar a implementação toString()</string>
+  <string name="msg_toString_overridden">toString() já foi substituído</string>
+  <string name="action_generate_missing_constructor">Gerar construtor ausente</string>
+  <string name="msg_cannot_generate_constructor">Não foi possível gerar um construtor</string>
+  <string name="msg_constructor_available">Um construtor com os mesmos tipos de parâmetro já está disponível</string>
   <string name="msg_cannot_create_view">Não é possível criar visualização para a tag: %s</string>
   <string name="err_no_attr_adapter">Nenhuma implementação de adaptador de atributo encontrada para %s</string>
   <string name="msg_view_not_supported">A visualização %s não é suportada atualmente.</string>
-
-
+  <string name="replace">Substituir</string>
+  <string name="replaceAll">Substituir tudo</string>
+  <string name="title_run_tasks">Executar tarefas</string>
+  <string name="hint_search_tasks">Pesquisar tarefas…</string>
+  <string name="title_selected_tasks">Tarefas selecionadas</string>
+  <string name="msg_err_select_tasks">Selecione as tarefas a serem executadas</string>
+  <string name="title_confirmation">Confirmação</string>
+  <string name="msg_tasks_to_run">As seguintes tarefas serão executadas, em ordem. Clique no botão \'Executar\' novamente para confirmar.\n\n%1$s</string>
+  <string name="msg_loading_tasks">Carregando tarefas...</string>
+  <string name="title_all_tasks">Todas as tarefas</string>
+  <string name="msg_feature_unimplemented">Este recurso ainda não foi implementado.</string>
+  <string name="ui_category_widgets">Widgets</string>
+  <string name="ui_category_layouts">Layouts</string>
+  <string name="widget_textview">TextView</string>
+  <string name="widget_button">Button</string>
+  <string name="widget_checkbox">CheckBox</string>
+  <string name="widget_checked_textview">CheckedTextView</string>
+  <string name="widget_edittext">EditText</string>
+  <string name="widget_image_button">ImageButton</string>
+  <string name="widget_image_view">ImageView</string>
+  <string name="widget_progressbar">ProgressBar</string>
+  <string name="widget_radio_button">RadioButton</string>
+  <string name="widget_seekbar">SeekBar</string>
+  <string name="widget_spinner">Spinner</string>
+  <string name="layout_linear">LinearLayout</string>
+  <string name="layout_relative">RelativeLayout</string>
+  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
+  <string name="widget_listview">ListView</string>
+  <string name="widget_surfaceview">SurfaceView</string>
+  <string name="widget_switch">Switch</string>
+  <string name="widget_textureview">TextureView</string>
+  <string name="widget_togglebutton">ToggleButton</string>
+  <string name="widget_webview">WebView</string>
+  <string name="widget_frame_layout">FrameLayout</string>
+  <string name="widget_grid_layout">GridLayout</string>
+  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
+  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
+  <string name="widget_relative_layout">RelativeLayout</string>
 </resources>
